force-app/main/default/objects/Position__c.object
<CustomObject>
    <description>Position</description>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Apex</description>
        <inlineHelpText>Apex</inlineHelpText>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Close_Date</description>
        <inlineHelpText>Close_Date</inlineHelpText>
        <label>Close_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Csharp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Csharp</description>
        <inlineHelpText>Csharp</inlineHelpText>
        <label>Csharp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <description>Educational_Requirements</description>
        <inlineHelpText>Educational_Requirements</inlineHelpText>
        <label>Educational_Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>